# WorkStealingQueue

./: CMakeLists.txt
bench/: bench.cpp
include/: WorkStealingQueue.h  wsq.h
test/: tests.cpp
